A2: Implements Multiply and GitHub, scaffolds Weather and BaseConvert